feat: save data csv from data treatment

--- a/src/data_treatment.ipynb
+++ b/src/data_treatment.ipynb
@@ -1355,6 +1355,24 @@
     "df_val = df_val[cols]\n",
     "df_test = df_train[cols]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Salvando o modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv('../data_treated/train.csv', index=False)\n",
+    "df_val.to_csv('../data_treated/validation.csv', index=False)\n",
+    "df_test.to_csv('../data_treated/test.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
