--- a/src/data_split.ipynb
+++ b/src/data_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt_train = pd.read_csv('../data/test.csv')\n",
-    "dt_test = pd.read_csv('../data/train.csv')"
+    "dt_train = pd.read_csv('../data/raw_data/test.csv')\n",
+    "dt_test = pd.read_csv('../data/raw_data/train.csv')"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,9 +300,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Felipe Moraes\\AppData\\Local\\Temp\\ipykernel_9616\\3572698216.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_satisfied.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
+      "C:\\Users\\Felipe Moraes\\AppData\\Local\\Temp\\ipykernel_9616\\3572698216.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_neutral.drop(['Unnamed: 0'], axis=1,inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "df_satisfied.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
     "df_neutral.drop(['Unnamed: 0'], axis=1,inplace=True)"
@@ -317,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +743,7 @@
        "[56428 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1166,7 @@
        "[73452 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1289,24 +1306,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save test\n",
     "df_train = pd.concat([df_satisfied_train, df_neutral_train], ignore_index=False)\n",
     "df_train = df_train.sample(frac=1, random_state=SEED, replace=False).reset_index(drop=True)\n",
-    "df_train.to_csv('../data_clean/train.csv', index=False)\n",
+    "df_train.to_csv('../data/clean_data/train.csv', index=False)\n",
     "\n",
     "# Save validation\n",
     "df_validation = pd.concat([df_satisfied_validation, df_neutral_validation], ignore_index=False)\n",
     "df_validation = df_validation.sample(frac=1, random_state=SEED, replace=False).reset_index(drop=True)\n",
-    "df_validation.to_csv('../data_clean/validation.csv', index=False)\n",
+    "df_validation.to_csv('../data/clean_data/validation.csv', index=False)\n",
     "\n",
     "# Save test\n",
     "df_test = pd.concat([df_satisfied_test, df_neutral_test], ignore_index=False)\n",
     "df_test = df_test.sample(frac=1, random_state=SEED, replace=False).reset_index(drop=True)\n",
-    "df_test.to_csv('../data_clean/test.csv', index=False)"
+    "df_test.to_csv('../data/clean_data/test.csv', index=False)"
    ]
   }
  ],
@@ -1326,7 +1343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
