--- a/src/data_treatment.ipynb
+++ b/src/data_treatment.ipynb
@@ -26,9 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('../data_clean/train.csv')\n",
-    "df_val = pd.read_csv('../data_clean/validation.csv')\n",
-    "df_test = pd.read_csv('../data_clean/test.csv')"
+    "df_train = pd.read_csv('../data/clean_data/train.csv')\n",
+    "df_val = pd.read_csv('../data/clean_data/validation.csv')\n",
+    "df_test = pd.read_csv('../data/clean_data/test.csv')"
    ]
   },
   {
@@ -1369,9 +1369,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train.to_csv('../data_treated/train.csv', index=False)\n",
-    "df_val.to_csv('../data_treated/validation.csv', index=False)\n",
-    "df_test.to_csv('../data_treated/test.csv', index=False)"
+    "df_train.to_csv('../data/treated_data/train.csv', index=False)\n",
+    "df_val.to_csv('../data/treated_data/validation.csv', index=False)\n",
+    "df_test.to_csv('../data/treated_data/test.csv', index=False)"
    ]
   }
  ],
