feat: add optune for xgboost

--- a/src/random_forest.ipynb
+++ b/src/random_forest.ipynb
@@ -891,14 +891,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using Optune to fine best Hyperparameter"
+    "#### Usando o Optune para encontrar os melhores Hiperparâmetros"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Primeiro iremos criar uma função objetivo, com foco em maximizar o test k-s"
+    "#### Primeiro iremos criar uma função objetivo, com foco em maximizar o AOC"
    ]
   },
   {
@@ -1360,7 +1360,7 @@
     "df = df[df[\"state\"] == \"COMPLETE\"].drop([\"datetime_start\", \"datetime_complete\", \"duration\", \"state\"], axis=1)\n",
     "df = df.sort_values(\"value\")  # Sort based on accuracy\n",
     "\n",
-    "csv_file = \"optuna_results.csv\"\n",
+    "csv_file = \"optuna_results_rf.csv\"\n",
     "df_existing = pd.read_csv(csv_file) if os.path.isfile(csv_file) else None\n",
     "\n",
     "df_existing = pd.concat([df_existing, df], ignore_index=True) if df_existing is not None else df\n",
