feat: add multiobjective optune for random forest

--- a/src/xgboost.ipynb
+++ b/src/xgboost.ipynb
@@ -1612,7 +1612,7 @@
    "source": [
     "df = study.trials_dataframe()\n",
     "df = df[df[\"state\"] == \"COMPLETE\"].drop([\"datetime_start\", \"datetime_complete\", \"duration\", \"state\"], axis=1)\n",
-    "df = df.sort_values(['values_0', 'values_1'])  # Sort based on accuracy\n",
+    "df = df.sort_values(['values_0', 'values_1']) \n",
     "\n",
     "csv_file = \"optuna_results_xgb.csv\"\n",
     "df_existing = pd.read_csv(csv_file) if os.path.isfile(csv_file) else None\n",
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2012,13 +2012,13 @@
      "text": [
       "\n",
       "-- Best Trial --\n",
-      "  Accuracy:  [0.99508096877352, 0.9234337584529742]\n",
+      "  Accuracy:  0.9627040344933785\n",
       "  Precision: 0.965022356844079\n",
       "  Recall:    0.94853618770823\n",
       "  F1 Score:  0.965022356844079\n",
       "  auroc:  0.99508096877352\n",
-      "  auroc:  0.9234337584529742\n",
-      "  auroc:  0.5329999923706055\n",
+      "  ks_statistic:  0.9234337584529742\n",
+      "  max_distance_at:  0.5329999923706055\n",
       "  Parameters: \n",
       "    max_depth:        21\n",
       "    eta:              0.2\n",
@@ -2102,24 +2102,24 @@
       "[10 rows x 21 columns]\n",
       "\n",
       "-- Most Important Hyperparameters --\n",
-      "  max_depth:       41.41%\n",
-      "  eta:             33.11%\n",
-      "  alpha:           19.98%\n",
-      "  grow_policy:     4.08%\n",
-      "  lambda:          1.43%\n"
+      "  eta:             43.41%\n",
+      "  max_depth:       35.85%\n",
+      "  alpha:           17.02%\n",
+      "  grow_policy:     2.22%\n",
+      "  lambda:          1.49%\n"
      ]
     }
    ],
    "source": [
     "best_trial = study.best_trials[0]\n",
     "print(\"\\n-- Best Trial --\")\n",
-    "print(f\"  Accuracy:  {best_trial.values}\")\n",
+    "print(f\"  Accuracy:  {best_trial.user_attrs['accuracy']}\")\n",
     "print(f\"  Precision: {best_trial.user_attrs['precision']}\")\n",
     "print(f\"  Recall:    {best_trial.user_attrs['recall']}\")\n",
     "print(f\"  F1 Score:  {best_trial.user_attrs['f1']}\")\n",
     "print(f\"  auroc:  {best_trial.user_attrs['auroc']}\")\n",
-    "print(f\"  auroc:  {best_trial.user_attrs['ks_statistic']}\")\n",
-    "print(f\"  auroc:  {best_trial.user_attrs['max_distance_at']}\")\n",
+    "print(f\"  ks_statistic:  {best_trial.user_attrs['ks_statistic']}\")\n",
+    "print(f\"  max_distance_at:  {best_trial.user_attrs['max_distance_at']}\")\n",
     "\n",
     "print(\"  Parameters: \")\n",
     "for key, val in best_trial.params.items():\n",
